# PhoeniSX2

./: .gitignore  CMakeLists.txt  PCSX2_qt.sln  PCSX2_suite.sln  README.md  build-instructions.txt
.github/workflows/: lint-gamedb.yml  linux-workflow.yml  macos-workflow.yml  release-push-tag-and-draft.yml  windows-workflow.yml
cmake/: BuildParameters.cmake  SearchForStuff.cmake  linux-compiler-aarch64.cmake
common/: Align.h  AlignedMalloc.h  CMakeLists.txt  Console.h  Exceptions.cpp  FastJmp.cpp  FastJmp.h  FileSystem.cpp  General.h  MemsetFast.inl  Misc.cpp  PageFaultSource.h  Pcsx2Defs.h  PersistentThread.h  Semaphore.cpp  StringUtil.cpp  ThreadTools.cpp  VirtualMemory.cpp  WindowInfo.h  common.vcxproj  common.vcxproj.filters
common/Darwin/: DarwinThreads.cpp
common/GL/: Context.cpp
common/Linux/: LnxHostSys.cpp  LnxMisc.cpp  LnxThreads.cpp
common/Vulkan/: Context.cpp
common/Windows/: WinHostSys.cpp  WinThreads.cpp
common/emitter/: LnxCpuDetect.cpp  WinCpuDetect.cpp  cpudetect.cpp  simd.cpp  tools.h  x86_intrin.h  x86emitter.h
common/vsprops/: BaseProjectConfig.props  BaseProperties.props  QtCompile.props  common.props
pcsx2/: CMakeLists.txt  Config.h  Counters.cpp  Dump.cpp  GS.cpp  GS.h  GSDumpReplayer.cpp  GSDumpReplayer.h  GameDatabase.cpp  GameDatabase.h  Gif.cpp  Gif_Unit.h  Host.cpp  Host.h  HostDisplay.cpp  HostDisplay.h  HostSettings.cpp  HostSettings.h  HwRead.cpp  HwWrite.cpp  Interpreter.cpp  IopHw.cpp  IopMem.cpp  MTGS.cpp  MTVU.cpp  MTVU.h  Mdec.cpp  Memory.cpp  Memory.h  MemoryCardFolder.cpp  PCSX2Base.h  Pcsx2Config.cpp  PerformanceMetrics.cpp  PrecompiledHeader.h  R3000A.cpp  R3000A.h  R3000AInterpreter.cpp  R5900.cpp  R5900.h  SaveState.cpp  (+19 more)
pcsx2-qt/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AetherSX2.icns  CMakeLists.txt  DisplayWidget.cpp  EmuThread.cpp  EmuThread.h  Info.plist.in  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  PrecompiledHeader.cpp  PrecompiledHeader.h  QtHost.cpp  QtHost.h  QtKeyCodes.cpp  QtUtils.cpp  QtUtils.h  SettingWidgetBinder.h  pcsx2-qt.vcxproj
pcsx2-qt/GameList/: GameListModel.cpp  GameListModel.h  GameListRefreshThread.cpp  GameListRefreshThread.h  GameListWidget.cpp  GameListWidget.h
pcsx2-qt/Settings/: AdvancedSystemSettingsWidget.cpp  AdvancedSystemSettingsWidget.h  AudioSettingsWidget.cpp  AudioSettingsWidget.h  BIOSSettingsWidget.cpp  BIOSSettingsWidget.h  BIOSSettingsWidget.ui  ControllerBindingWidgets.cpp  ControllerBindingWidgets.h  ControllerGlobalSettingsWidget.cpp  ControllerGlobalSettingsWidget.h  ControllerSettingsDialog.cpp  ControllerSettingsDialog.h  ControllerSettingsDialog.ui  CreateMemoryCardDialog.cpp  CreateMemoryCardDialog.h  EmulationSettingsWidget.cpp  EmulationSettingsWidget.h  GameFixSettingsWidget.cpp  GameFixSettingsWidget.h  GameListSettingsWidget.cpp  GameListSettingsWidget.h  GameSummaryWidget.cpp  GameSummaryWidget.h  GraphicsSettingsWidget.cpp  GraphicsSettingsWidget.h  GraphicsSettingsWidget.ui  HotkeySettingsWidget.cpp  HotkeySettingsWidget.h  InputBindingDialog.cpp  InputBindingDialog.h  InputBindingWidget.cpp  InputBindingWidget.h  InterfaceSettingsWidget.cpp  InterfaceSettingsWidget.h  MemoryCardSettingsWidget.cpp  MemoryCardSettingsWidget.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  (+2 more)
pcsx2/Android/: AndroidInputSource.h
pcsx2/CDVD/: CDVD.cpp  GzippedFileReader.cpp  ThreadedFileReader.cpp
pcsx2/DEV9/: net.cpp  pcap_io.cpp
pcsx2/DEV9/Win32/: tap-win32.cpp
pcsx2/Frontend/: D3D11HostDisplay.cpp  D3D11HostDisplay.h  D3D12HostDisplay.cpp  D3D12HostDisplay.h  GameList.cpp  GameList.h  INISettingsInterface.cpp  INISettingsInterface.h  ImGuiManager.cpp  ImGuiManager.h  InputManager.cpp  InputManager.h  InputSource.cpp  InputSource.h  LayeredSettingsInterface.cpp  LayeredSettingsInterface.h  OpenGLHostDisplay.cpp  OpenGLHostDisplay.h  SDLInputSource.cpp  SDLInputSource.h  VulkanHostDisplay.cpp  VulkanHostDisplay.h
pcsx2/GS/: GS.cpp  GS.h  GSCapture.cpp  GSClut.cpp  GSExtra.h  GSIntrin.h  GSPerfMon.cpp  GSRegs.h  GSState.cpp  GSState.h  GSUtil.cpp  GSUtil.h  GSVector.h  GSVector4.h  GSVector4_arm64.h  GSVector4i.h  GSVector4i_arm64.h  GSVector8i.h
pcsx2/GS/Renderers/Common/: GSDevice.h  GSFunctionMap.h  GSRenderer.cpp  GSRenderer.h  GSVertex.h
pcsx2/GS/Renderers/DX11/: GSDevice11.cpp  GSTextureFX11.cpp
pcsx2/GS/Renderers/DX12/: GSDevice12.cpp
pcsx2/GS/Renderers/HW/: GSRendererHW.cpp  GSRendererHW.h  GSRendererNew.cpp  GSRendererNew.h  GSTextureCache.cpp  GSTextureReplacementLoaders.cpp  GSTextureReplacements.cpp
pcsx2/GS/Renderers/OpenGL/: GLLoader.cpp  GLLoader.h  GSDeviceOGL.cpp  GSDeviceOGL.h  GSTextureOGL.cpp  GSUniformBufferOGL.h
pcsx2/GS/Renderers/SW/: GSDrawScanline.cpp  GSDrawScanlineCodeGenerator.all.cpp  GSDrawScanlineCodeGenerator.arm64.h  GSDrawScanlineCodeGenerator.cpp  GSRasterizer.cpp  GSRendererSW.cpp  GSScanlineEnvironment.h  GSSetupPrimCodeGenerator.arm64.h  GSSetupPrimCodeGenerator.cpp
pcsx2/GS/Renderers/Vulkan/: GSDeviceVK.cpp  GSDeviceVK.h
pcsx2/GS/Window/: GSCaptureDlg.cpp  GSwxDialog.cpp
pcsx2/IPU/: IPU.cpp  IPU.h  IPU_Fifo.cpp  IPUdma.cpp
pcsx2/SPU2/: SndOut.cpp  SndOut.h  SndOut_AAudio.cpp
pcsx2/SPU2/Host/: Config.cpp
pcsx2/SPU2/Linux/: Config.cpp
pcsx2/System/: SysThreads.h
pcsx2/arm64/: newVif.h  newVif_HashBucket.h
pcsx2/x86/: iFPU.cpp  iR3000A.cpp  iR5900Analysis.cpp  iR5900Analysis.h  microVU.cpp  microVU_Compile.inl  microVU_Upper.inl  newVif.h  newVif_Dynarec.cpp  newVif_Unpack.cpp  newVif_UnpackSSE.cpp
pcsx2/x86/ix86-32/: iR5900-32.cpp
tests/ctest/: CMakeLists.txt
tools/: make_linux_qt_build.sh  repack.sh
tools/appimage/: .gitignore  AppRun  clean_appimage.sh  make_appimage.sh
